--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,41 +1,25 @@
 {
- "name": "App",
- "icons": [
-  {
-   "src": "/assets/icon/android-icon-36x36.png",
-   "sizes": "36x36",
-   "type": "image/png",
-   "density": 0.75
-  },
-  {
-   "src": "/assets/icon/android-icon-48x48.png",
-   "sizes": "48x48",
-   "type": "image/png",
-   "density": 1.0
-  },
-  {
-   "src": "/assets/icon/android-icon-72x72.png",
-   "sizes": "72x72",
-   "type": "image/png",
-   "density": 1.5
-  },
-  {
-   "src": "/assets/icon/android-icon-96x96.png",
-   "sizes": "96x96",
-   "type": "image/png",
-   "density": 2.0
-  },
-  {
-   "src": "/assets/icon/android-icon-144x144.png",
-   "sizes": "144x144",
-   "type": "image/png",
-   "density": 3.0
-  },
-  {
-   "src": "/assets/icon/android-icon-192x192.png",
-   "sizes": "192x192",
-   "type": "image/png",
-   "density": 4.0
-  }
- ]
+  "name": "template",
+  "short_name": "template",
+  "icons": [{
+		"src": "images/touch/icon-128x128.png",
+		"sizes": "128x128",
+		"type": "image/png"
+	  }, {
+		"src": "images/touch/apple-touch-icon.png",
+		"sizes": "152x152",
+		"type": "image/png"
+	  }, {
+		"src": "images/touch/ms-touch-icon-144x144-precomposed.png",
+		"sizes": "144x144",
+		"type": "image/png"
+	  }, {
+		"src": "images/touch/chrome-touch-icon-192x192.png",
+		"sizes": "192x192",
+		"type": "image/png"
+	  }],
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#3E4EB8",
+  "theme_color": "#656970"
 }
