--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,26 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true
+	"target": "es5",
+	"module": "commonjs",
+	"declaration": false,
+	"noImplicitAny": true,
+	"suppressImplicitAnyIndexErrors": true,
+	"suppressExcessPropertyErrors": true,
+	"removeComments": false,
+	"emitDecoratorMetadata": true,
+	"experimentalDecorators": true,
+	"noEmitOnError": false,
+	"preserveConstEnums": true,
+	"inlineSources": false,
+	"sourceMap": true,
+	"outDir": "./.tmp",
+	"rootDir": "./src",
+	"moduleResolution": "node",
+	"listFiles": false
   },
   "exclude": [
-    "node_modules",
-    "typings/main.d.ts",
-    "typings/main"
-  ],
-  "filesGlob": [
-    "./src/**/*.ts",
-    "./test/**/*.ts",
-    "!./node_modules/**/*.ts",
-    "src/custom_typings.d.ts",
-    "typings/browser.d.ts"
-  ],
-  "compileOnSave": false,
-  "buildOnSave": false,
-  "atom": { "rewriteTsconfig": false }
+	"node_modules",
+	"typings/main",
+	"typings/main.d.ts"
+  ]
 }
