--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,8 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
-indent_style = tab
+indent_style = space
+indent_size = 4
 trim_trailing_whitespace = false
 charset = utf-8
 
@@ -18,4 +19,4 @@ end_of_line = crlf
 
 [{package.json,.travis.yml}]
 indent_style = space
-indent_size = 2
+indent_size = 4
