--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "rxjs": "5.0.0-beta.1"
     },
     "devDependencies": {
-        "typescript": "1.7.5",
+        "typescript": "1.8.0",
         "reflect-metadata": "0.1.x",
         "typings": "0.6.x",
         "tslint": "3.3.x",
@@ -61,7 +61,7 @@
         "webpack-dev-server": "1.14.x",
         "copy-webpack-plugin": "1.1.x",
         "extract-text-webpack-plugin": "1.0.x",
-        "html-webpack-plugin": "2.8.x",
+        "html-webpack-plugin": "1.7.x",
         "compression-webpack-plugin": "0.3.x",
         "webpack-md5-hash": "0.0.x",
         "raw-loader": "0.5.x",
@@ -105,11 +105,12 @@
     },
     "scripts": {
         "typings": "typings",
+        "tsc": "tsc",
         "typings-install": "typings install",
         "postinstall": "npm run typings-install",
         "clean": "rimraf node_modules doc typings coverage .tmp build dist && npm cache clean",
         "preclean:install": "npm run clean",
-        "clean:install": "npm install",
+        "clean:install": "npm install --no-optional",
         "clean:dist": "rimraf .tmp dist",
         "preclean:start": "npm run clean",
         "clean:start": "npm start",
@@ -124,7 +125,7 @@
         "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
         "server": "npm run server:dev",
         "serve": "npm run server:dev",
-        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --hot --inline--content-base src/",
+        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --hot --inline --content-base src/",
         "server:prod": "http-server dist --cors",
         "webdriver:update": "webdriver-manager update",
         "webdriver:start": "webdriver-manager start",
