Upgraded html webpack plugin to 2.x and adapted template

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "webpack-dev-server": "1.14.x",
         "copy-webpack-plugin": "1.1.x",
         "extract-text-webpack-plugin": "1.0.x",
-        "html-webpack-plugin": "1.7.x",
+        "html-webpack-plugin": "2.8.x",
         "compression-webpack-plugin": "0.3.x",
         "webpack-md5-hash": "0.0.x",
         "raw-loader": "0.5.x",
@@ -125,6 +125,8 @@
         "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
         "server": "npm run server:dev",
         "serve": "npm run server:dev",
+        "serve:dev": "npm run server:dev",
+        "serve:prod": "npm run server:prod",
         "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --hot --inline --content-base src/",
         "server:prod": "http-server dist --cors",
         "webdriver:update": "webdriver-manager update",
