--- a/.editorconfig
+++ b/.editorconfig
@@ -17,6 +17,6 @@ charset = utf-8
 [*.bat]
 end_of_line = crlf
 
-[{package.json,.travis.yml}]
+[{package.json,.travis.yml,.jshintrc}]
 indent_style = space
 indent_size = 4
