--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "extract-text-webpack-plugin": "1.0.x",
         "html-webpack-plugin": "2.8.x",
         "compression-webpack-plugin": "0.3.x",
-        "webpack-md5-hash": "0.0.x",
+        "webpack-sha-hash": "1.x",
         "raw-loader": "0.5.x",
         "file-loader": "0.8.x",
         "url-loader": "0.5.x",
