--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
         "rxjs": "5.0.0-beta.1"
     },
     "devDependencies": {
-        "typescript": "1.8.0",
+        "typescript": "1.8.x",
         "reflect-metadata": "0.1.x",
         "typings": "0.6.x",
-        "tslint": "3.3.x",
+        "tslint": "3.4.x",
         "ts-helper": "0.0.x",
         "typedoc": "0.3.x",
         "http-server": "0.8.x",
-        "tsconfig-lint": "0.5.x",
+        "tsconfig-lint": "0.6.x",
         "autoprefixer": "6.3.x",
         "rimraf": "2.5.x",
         "ncp": "2.0.x",
@@ -137,7 +137,7 @@
         "server:prod": "http-server dist --cors",
         "webdriver:update": "webdriver-manager update",
         "webdriver:start": "webdriver-manager start",
-        "lint": "tsconfig-lint",
+        "lint": "tsconfig-lint .",
         "pree2e": "npm run webdriver:update -- --standalone",
         "e2e": "protractor",
         "e2e:live": "protractor --elementExplorer",
