--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
         "lodash": "4.2.x",
         "moment": "2.11.x",
         "redux": "3.2.x",
-        "rxjs": "5.0.0-beta.1"
+        "rxjs": "5.0.0-beta.1", 
+        "ui-router":"0.2.x"
     },
     "devDependencies": {
         "typescript": "1.8.0",
