--- a/package.json
+++ b/package.json
@@ -32,32 +32,34 @@
         "redux"
     ],
     "dependencies": {
-        "angular": "1.5.0-rc.2",
-        "angular-animate": "1.5.0-rc.2",
-        "angular-aria": "1.5.0-rc.2",
+        "angular": "1.5.0",
+        "angular-animate": "1.5.0",
+        "angular-aria": "1.5.0",
         "angular-material": "1.0.x",
-        "angular-mocks": "1.5.0-rc.2",
-        "angular-sanitize": "1.5.0-rc.2",
-        "angular-touch": "1.5.0-rc.2",
-        "es6-promise": "3.0.x",
-        "es6-shim": "0.34.x",
-        "es7-reflect-metadata": "1.5.x",
+        "angular-messages": "1.5.0",
+        "angular-mocks": "1.5.0",
+        "angular-sanitize": "1.5.0",
+        "angular-touch": "1.5.0",
+        "angular-ui-router": "0.2.x",
+        "es6-promise": "3.1.x",
+        "es6-shim": "0.35.x",
+        "es7-reflect-metadata": "1.6.x",
         "immutable": "3.7.x",
-        "js-data": "2.8.x",
-        "lodash": "4.2.x",
+        "immutable-angular": "0.1.x",
+        "js-data": "2.9.x",
+        "lodash": "4.6.x",
         "moment": "2.11.x",
-        "redux": "3.2.x",
-        "rxjs": "5.0.0-beta.1", 
-        "ui-router":"0.2.x"
+        "redux": "3.3.x",
+        "rxjs": "5.0.0-beta.2"
     },
     "devDependencies": {
         "typescript": "1.8.x",
         "reflect-metadata": "0.1.x",
-        "typings": "0.6.x",
-        "tslint": "3.4.x",
+        "typings": "0.x",
+        "tslint": "3.5.x",
         "ts-helper": "0.0.x",
         "typedoc": "0.3.x",
-        "http-server": "0.8.x",
+        "http-server": "0.9.x",
         "tsconfig-lint": "0.6.x",
         "autoprefixer": "6.3.x",
         "rimraf": "2.5.x",
@@ -129,12 +131,12 @@
         "prebuild:dev": "npm run clean:dist",
         "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
         "prebuild:prod": "npm run clean:dist",
-        "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
+        "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached --bail",
         "server": "npm run server:dev",
         "serve": "npm run server:dev",
         "serve:dev": "npm run server:dev",
         "serve:prod": "npm run server:prod",
-        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --hot --inline --content-base src/",
+        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --hot --inline --watch --content-base src/",
         "server:prod": "http-server dist --cors",
         "webdriver:update": "webdriver-manager update",
         "webdriver:start": "webdriver-manager start",
