--- a/package.json
+++ b/package.json
@@ -133,11 +133,12 @@
         "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
         "prebuild:prod": "npm run clean:dist",
         "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached --bail",
-        "server": "npm run server:dev",
-        "serve": "npm run server:dev",
+        "server": "npm run server:dev:hmr",
+        "serve": "npm run server:dev:hmr",
         "serve:dev": "npm run server:dev",
         "serve:prod": "npm run server:prod",
-        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --hot --inline --watch --content-base src/",
+        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --inline --watch --content-base src/",
+        "server:dev:hmr": "npm run server:dev -- --hot",
         "server:prod": "http-server dist --cors",
         "webdriver:update": "webdriver-manager update",
         "webdriver:start": "webdriver-manager start",
@@ -148,7 +149,7 @@
         "test": "karma start",
         "ci": "npm run e2e && npm run test",
         "docs": "typedoc --options typedoc.json --exclude *.spec.ts ./src/",
-        "start": "npm run server:dev",
+        "start": "npm run server",
         "preversion": "npm test",
         "version": "npm run build",
         "outdated": "npm outdated"
