--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
         "prebuild:dev": "npm run clean:dist",
         "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
         "prebuild:prod": "npm run clean:dist",
-        "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached --bail",
+        "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
         "server": "npm run server:dev:hmr",
         "serve": "npm run server:dev:hmr",
         "serve:dev": "npm run server:dev",
