--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "html-webpack-plugin": "2.8.x",
         "compression-webpack-plugin": "0.3.x",
         "webpack-sha-hash": "1.x",
+        "webpack-merge": "0.8.x",
         "raw-loader": "0.5.x",
         "file-loader": "0.8.x",
         "url-loader": "0.5.x",
