--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
         "angular-sanitize": "1.5.0",
         "angular-touch": "1.5.0",
         "angular-ui-router": "0.2.x",
+        "angular-translate": "2.10.x",
+        "angular-translate-loader-static-files": "2.9.x",
         "es6-promise": "3.1.x",
         "es6-shim": "0.35.x",
         "es7-reflect-metadata": "1.6.x",
