--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
     "exclude": [
         "node_modules",
         "typings/main",
-        "typings/main.d.ts"
+        "typings/main.d.ts",
+        "typings/browser",
+        "src/typings/custom"
     ],
     "formatCodeOptions": {
         "indentSize": 4,
