--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
         "ts-helper": "0.0.x",
         "typedoc": "0.3.x",
         "http-server": "0.9.x",
-        "tsconfig-lint": "0.7.x",
+        "tsconfig-lint": "0.8.x",
         "autoprefixer": "6.3.x",
         "rimraf": "2.5.x",
         "ncp": "2.0.x",
@@ -109,7 +109,7 @@
         "karma-mocha-reporter": "1.1.x",
         "karma-ie-launcher": "0.2.x",
         "remap-istanbul": "0.5.x",
-        "protractor": "3.0.x"
+        "protractor": "3.1.x"
     },
     "engines": {
         "node": ">=4.3.0",
@@ -129,13 +129,14 @@
         "clean:start": "npm start",
         "watch": "npm run watch:dev",
         "watch:dev": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
+        "watch:dev:hmr": "npm run watch:dev -- --hot",
         "watch:test": "npm run test -- --auto-watch --no-single-run",
         "watch:prod": "webpack --watch --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
         "build": "npm run build:dev",
         "prebuild:dev": "npm run clean:dist",
         "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
         "prebuild:prod": "npm run clean:dist",
-        "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
+        "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached --bail",
         "server": "npm run server:dev:hmr",
         "serve": "npm run server:dev:hmr",
         "serve:dev": "npm run server:dev",
