Improved npm scripts (closes #60)

--- a/package.json
+++ b/package.json
@@ -121,22 +121,25 @@
         "typings": "typings",
         "typings-install": "typings install",
         "protractor": "protractor",
-        "postinstall": "npm run typings-install",
-        "clean": "rimraf node_modules doc typings coverage .tmp build dist && npm cache clean",
-        "preclean:install": "npm run clean",
+        "clean": "rimraf profiling doc coverage dist",
+        "preclean:all": "npm run clean",
+        "clean:all": "rimraf node_modules typings && npm cache clean",
+        "preclean:install": "npm run clean:all",
         "clean:install": "npm install --no-optional",
-        "clean:dist": "rimraf .tmp dist",
+        "clean:dist": "rimraf dist",
         "preclean:start": "npm run clean",
         "clean:start": "npm start",
         "watch": "npm run watch:dev",
+        "prewatch:dev": "npm run clean",
         "watch:dev": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
         "watch:dev:hmr": "npm run watch:dev -- --hot",
         "watch:test": "npm run test -- --auto-watch --no-single-run",
+        "prewatch:prod": "npm run clean",
         "watch:prod": "webpack --watch --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
         "build": "npm run build:dev",
-        "prebuild:dev": "npm run clean:dist",
+        "prebuild:dev": "npm run clean",
         "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
-        "prebuild:prod": "npm run clean:dist",
+        "prebuild:prod": "npm run clean",
         "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached --bail",
         "server": "npm run server:dev:hmr",
         "serve": "npm run server:dev:hmr",
@@ -144,6 +147,7 @@
         "serve:prod": "npm run server:prod",
         "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --inline --watch --content-base src/",
         "server:dev:hmr": "npm run server:dev -- --hot",
+        "preserver:prod": "npm run build:prod",
         "server:prod": "http-server dist --cors",
         "webdriver:update": "webdriver-manager update",
         "webdriver:start": "webdriver-manager start",
@@ -153,11 +157,13 @@
         "e2e:live": "protractor --elementExplorer",
         "test": "karma start",
         "ci": "npm run e2e && npm run test",
+        "profiling": "webpack --progress -c --profile --json > profiling/stats.json",
         "docs": "typedoc --options typedoc.json --exclude *.spec.ts ./src/",
         "start": "npm run server",
         "preversion": "npm test",
         "version": "npm run build",
         "outdated": "npm outdated",
-        "setup": "npm install --no-optional"
+        "setup": "npm install --no-optional",
+        "postinstall": "npm run typings-install"
     }
 }
