Improved profiling task

--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
         "typings": "typings",
         "typings-install": "typings install",
         "protractor": "protractor",
-        "clean": "rimraf profiling doc coverage dist",
+        "clean": "rimraf profiling doc coverage dist stats.json",
         "preclean:all": "npm run clean",
         "clean:all": "rimraf node_modules typings && npm cache clean",
         "preclean:install": "npm run clean:all",
@@ -157,7 +157,8 @@
         "e2e:live": "protractor --elementExplorer",
         "test": "karma start",
         "ci": "npm run e2e && npm run test",
-        "profiling": "webpack --progress -c --profile --json > profiling/stats.json",
+        "preprofiling": "npm run clean",
+        "profiling": "webpack --progress -c --profile --json > stats.json",
         "docs": "typedoc --options typedoc.json --exclude *.spec.ts ./src/",
         "start": "npm run server",
         "preversion": "npm test",
