--- a/package.json
+++ b/package.json
@@ -103,10 +103,11 @@
         "karma-phantomjs-launcher": "1.0.x",
         "karma-sourcemap-loader": "0.3.x",
         "karma-webpack": "1.7.x",
+        "parse5": "^1.3.2",
         "karma-firefox-launcher": "0.1.x",
         "karma-junit-reporter": "0.3.x",
         "karma-spec-reporter": "0.0.x",
-        "karma-mocha-reporter": "1.1.x",
+        "karma-mocha-reporter": "^2.0.0",
         "karma-ie-launcher": "0.2.x",
         "remap-istanbul": "0.5.x",
         "protractor": "3.1.x",
