--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
         "typings": "typings",
         "typings-install": "typings install",
         "protractor": "protractor",
-        "clean": "rimraf profiling doc coverage dist stats.json",
+        "clean": "rimraf doc coverage dist stats.json",
         "preclean:all": "npm run clean",
         "clean:all": "rimraf node_modules typings && npm cache clean",
         "preclean:install": "npm run clean:all",
@@ -145,7 +145,8 @@
         "serve": "npm run server:dev:hmr",
         "serve:dev": "npm run server:dev",
         "serve:prod": "npm run server:prod",
-        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --inline --watch --content-base src/",
+        "preserver:dev": "npm run clean",
+        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --inline --watch",
         "server:dev:hmr": "npm run server:dev -- --hot",
         "preserver:prod": "npm run build:prod",
         "server:prod": "http-server dist --cors",
