--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "webpack-dev-server": "1.14.x",
         "copy-webpack-plugin": "1.1.x",
         "extract-text-webpack-plugin": "1.0.x",
+        "html-loader": "^0.4.3",
         "html-webpack-plugin": "2.8.x",
         "compression-webpack-plugin": "0.3.x",
         "webpack-sha-hash": "1.x",
@@ -103,6 +104,7 @@
         "karma-sourcemap-loader": "0.3.x",
         "karma-webpack": "1.7.x",
         "parse5": "^1.3.2",
+        "ngtemplate-loader": "^1.3.1",
         "karma-firefox-launcher": "0.1.x",
         "karma-junit-reporter": "0.3.x",
         "karma-spec-reporter": "0.0.x",
