Removed es6-promise (not needed)

--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
         "angular-sanitize": "1.5.0",
         "angular-touch": "1.5.0",
         "angular-ui-router": "0.2.x",
+        "axios": "0.9.x",
         "angular-translate": "2.10.x",
         "angular-translate-loader-static-files": "2.9.x",
-        "es6-promise": "3.1.x",
         "es6-shim": "0.35.x",
         "es7-reflect-metadata": "1.6.x",
         "immutable": "3.7.x",
@@ -84,7 +84,6 @@
         "exports-loader": "0.6.x",
         "imports-loader": "0.6.x",
         "expose-loader": "0.7.x",
-        "es6-promise-loader": "1.0.x",
         "css-loader": "0.23.x",
         "node-sass": "3.4.x",
         "postcss-loader": "0.8.x",
