Add pretty printing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "noEmitOnError": false,
         "preserveConstEnums": true,
         "inlineSources": false,
+        "pretty": true,
         "sourceMap": true,
         "outDir": "./.tmp",
         "rootDir": "./src",
