--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
         "watch:dev": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
         "watch:dev:hmr": "npm run watch:dev -- --hot",
         "watch:test": "npm run test -- --auto-watch --no-single-run",
+        "watch:testd": "npm run test -- --auto-watch --no-single-run --browsers=Chrome",
         "prewatch:prod": "npm run clean",
         "watch:prod": "webpack --watch --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
         "build": "npm run build:dev",
