Switched to core-js (replaces a few other polyfills)

--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
         "axios": "0.9.x",
         "angular-translate": "2.10.x",
         "angular-translate-loader-static-files": "2.9.x",
-        "es6-shim": "0.35.x",
-        "es7-reflect-metadata": "1.6.x",
+        "core-js": "^2.1.5",
         "immutable": "3.7.x",
         "immutable-angular": "0.1.x",
         "js-data": "2.9.x",
