--- a/package.json
+++ b/package.json
@@ -32,30 +32,31 @@
         "redux"
     ],
     "dependencies": {
-        "angular": "1.5.0",
-        "angular-animate": "1.5.0",
-        "angular-aria": "1.5.0",
-        "angular-material": "1.0.x",
-        "angular-messages": "1.5.0",
-        "angular-mocks": "1.5.0",
-        "angular-sanitize": "1.5.0",
-        "angular-touch": "1.5.0",
-        "angular-ui-router": "0.2.x",
+        "angular": "^1.5.2",
+        "angular-animate": "^1.5.2",
+        "angular-aria": "^1.5.2",
+        "angular-material": "^1.0.6",
+        "angular-messages": "^1.5.2",
+        "angular-mocks": "^1.5.2",
+        "angular-sanitize": "^1.5.2",
+        "angular-touch": "^1.5.2",
+        "angular-ui-router": "^0.2.18",
         "axios": "0.9.x",
-        "angular-translate": "2.10.x",
-        "angular-translate-loader-static-files": "2.9.x",
+        "angular-translate": "^2.11.0",
+        "angular-translate-loader-static-files": "^2.10.0",
         "core-js": "^2.1.5",
-        "immutable": "3.7.x",
-        "immutable-angular": "0.1.x",
-        "js-data": "2.9.x",
-        "js-data-angular": "3.1.x",
+        "immutable": "^3.7.6",
+        "immutable-angular": "^0.1.1",
+        "js-data": "^2.9.0",
+        "js-data-angular": "^3.2.1",
         "lodash": "4.6.x",
         "moment": "2.11.x",
         "redux": "3.3.x",
         "rxjs": "5.0.0-beta.2"
     },
     "devDependencies": {
-        "awesome-typescript-loader": "^0.16.0-rc.0",
+        "awesome-typescript-loader": "^0.16.2",
+        "autoprefixer": "6.3.x",
         "typescript": "1.8.x",
         "reflect-metadata": "0.1.x",
         "typings": "0.x",
@@ -64,7 +65,6 @@
         "typedoc": "0.3.x",
         "http-server": "0.9.x",
         "tsconfig-lint": "0.8.x",
-        "autoprefixer": "6.3.x",
         "rimraf": "2.5.x",
         "ncp": "2.0.x",
         "webpack": "1.12.x",
@@ -78,7 +78,7 @@
         "raw-loader": "0.5.x",
         "file-loader": "0.8.x",
         "url-loader": "0.5.x",
-        "json-loader": "0.5.x",
+        "json-loader": "^0.5.4",
         "style-loader": "0.13.x",
         "exports-loader": "0.6.x",
         "imports-loader": "0.6.x",
@@ -87,7 +87,7 @@
         "node-sass": "3.4.x",
         "postcss-loader": "0.8.x",
         "sass-loader": "3.1.x",
-        "ts-node": "0.5.x",
+        "ts-node": "0.7.x",
         "source-map-loader": "0.1.x",
         "tslint-loader": "^2.1.3",
         "istanbul-instrumenter-loader": "0.1.x",
@@ -109,7 +109,7 @@
         "karma-mocha-reporter": "^2.0.0",
         "karma-ie-launcher": "0.2.x",
         "remap-istanbul": "0.5.x",
-        "protractor": "3.1.x",
+        "protractor": "3.2.x",
         "sinon": "1.17.x"
     },
     "engines": {
@@ -147,7 +147,7 @@
         "serve:dev": "npm run server:dev",
         "serve:prod": "npm run server:prod",
         "preserver:dev": "npm run clean",
-        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --history-api-fallback --open --inline --watch",
+        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --open --inline --watch",
         "server:dev:hmr": "npm run server:dev -- --hot",
         "preserver:prod": "npm run build:prod",
         "server:prod": "http-server dist --cors",
