Updated scripts and build

--- a/package.json
+++ b/package.json
@@ -117,56 +117,54 @@
         "npm": ">=3.7.3"
     },
     "scripts": {
+        "build": "npm run build:dev",
+        "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
+        "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached --bail",
+        "ci": "npm run e2e && npm run test",
+        "clean": "rimraf doc coverage reports dist stats.json",
+        "clean:all": "rimraf typings && npm cache clean",
+        "clean:dist": "rimraf dist",
+        "clean:install": "npm install --no-optional",
+        "clean:start": "npm start",
+        "docs": "typedoc --options typedoc.json --exclude *.spec.ts ./src/",
+        "e2e": "protractor",
+        "e2e:live": "protractor --elementExplorer",
+        "lint": "tsconfig-lint .",
+        "outdated": "npm outdated",
+        "postinstall": "npm run typings-install",
+        "prebuild:dev": "npm run clean",
+        "prebuild:prod": "npm run clean",
+        "preclean:all": "npm run clean",
+        "preclean:install": "npm run clean:all",
+        "preclean:start": "npm run clean",
+        "pree2e": "npm run webdriver:update --  --standalone",
+        "preprofiling": "npm run clean",
+        "preserver:dev": "npm run clean",
+        "preserver:prod": "npm run build:prod",
+        "preversion": "npm test",
+        "prewatch:dev": "npm run clean",
+        "prewatch:prod": "npm run clean",
+        "profiling": "webpack --progress -c --profile --json > stats.json",
+        "protractor": "protractor",
+        "server": "npm run server:dev:hmr",
+        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --open --inline --watch",
+        "server:dev:hmr": "npm run server:dev -- --hot",
+        "server:prod": "http-server dist --cors",
+        "setup": "npm install --global typings rimraf && npm install --no-optional",
+        "start": "npm run server",
+        "test": "karma start",
         "tsc": "tsc",
         "typings": "typings",
         "typings-install": "typings install",
-        "protractor": "protractor",
-        "clean": "rimraf doc coverage dist stats.json",
-        "preclean:all": "npm run clean",
-        "clean:all": "rimraf typings && npm cache clean",
-        "preclean:install": "npm run clean:all",
-        "clean:install": "npm install --no-optional",
-        "clean:dist": "rimraf dist",
-        "preclean:start": "npm run clean",
-        "clean:start": "npm start",
+        "version": "npm run build",
         "watch": "npm run watch:dev",
-        "prewatch:dev": "npm run clean",
         "watch:dev": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
         "watch:dev:hmr": "npm run watch:dev -- --hot",
+        "watch:prod": "webpack --watch --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
         "watch:test": "npm run test -- --auto-watch --no-single-run",
         "watch:testd": "npm run test -- --auto-watch --no-single-run --browsers=Chrome",
-        "prewatch:prod": "npm run clean",
-        "watch:prod": "webpack --watch --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
-        "build": "npm run build:dev",
-        "prebuild:dev": "npm run clean",
-        "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
-        "prebuild:prod": "npm run clean",
-        "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached --bail",
-        "server": "npm run server:dev:hmr",
-        "serve": "npm run server:dev:hmr",
-        "serve:dev": "npm run server:dev",
-        "serve:prod": "npm run server:prod",
-        "preserver:dev": "npm run clean",
-        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --open --inline --watch",
-        "server:dev:hmr": "npm run server:dev -- --hot",
-        "preserver:prod": "npm run build:prod",
-        "server:prod": "http-server dist --cors",
-        "webdriver:update": "webdriver-manager update",
+        "webdriver": "webdriver-manager",
         "webdriver:start": "webdriver-manager start",
-        "lint": "tsconfig-lint .",
-        "pree2e": "npm run webdriver:update -- --standalone",
-        "e2e": "protractor",
-        "e2e:live": "protractor --elementExplorer",
-        "test": "karma start",
-        "ci": "npm run e2e && npm run test",
-        "preprofiling": "npm run clean",
-        "profiling": "webpack --progress -c --profile --json > stats.json",
-        "docs": "typedoc --options typedoc.json --exclude *.spec.ts ./src/",
-        "start": "npm run server",
-        "preversion": "npm test",
-        "version": "npm run build",
-        "outdated": "npm outdated",
-        "setup": "npm install -g rimraf && npm install --no-optional",
-        "postinstall": "npm run typings-install"
+        "webdriver:update": "webdriver-manager update --ie32"
     }
 }
