Isolated webpack, karma and protractor config

--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "devDependencies": {
         "awesome-typescript-loader": "^0.16.2",
         "autoprefixer": "6.3.x",
-        "typescript": "1.8.x",
+        "typescript": "^1.8.9",
         "reflect-metadata": "0.1.x",
-        "typings": "0.x",
+        "typings": "^0.7.9",
         "tslint": "3.5.x",
         "ts-helper": "0.0.x",
         "typedoc": "0.3.x",
@@ -87,17 +87,17 @@
         "node-sass": "3.4.x",
         "postcss-loader": "0.8.x",
         "sass-loader": "3.1.x",
-        "ts-node": "0.7.x",
+        "ts-node": "^0.7.0",
         "source-map-loader": "0.1.x",
         "tslint-loader": "^2.1.3",
         "istanbul-instrumenter-loader": "0.1.x",
         "jasmine-core": "2.4.x",
-        "phantomjs-prebuilt": "2.1.x",
+        "phantomjs-prebuilt": "^2.1.6",
         "phantomjs-polyfill": "0.0.x",
-        "karma": "0.13.x",
+        "karma": "^0.13.22",
         "karma-chrome-launcher": "0.2.x",
-        "karma-coverage": "0.5.x",
-        "karma-jasmine": "0.3.x",
+        "karma-coverage": "^0.5.5",
+        "karma-jasmine": "^0.3.8",
         "karma-phantomjs-launcher": "1.0.x",
         "karma-sourcemap-loader": "0.3.x",
         "karma-webpack": "1.7.x",
@@ -118,8 +118,8 @@
     },
     "scripts": {
         "build": "npm run build:dev",
-        "build:dev": "webpack --progress --profile --colors --display-error-details --display-cached",
-        "build:prod": "webpack --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached --bail",
+        "build:dev": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
+        "build:prod": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.prod.js --progress --profile --colors --display-error-details --display-cached --bail",
         "ci": "npm run e2e && npm run test",
         "clean": "rimraf doc coverage reports dist stats.json",
         "clean:all": "rimraf typings && npm cache clean",
@@ -128,7 +128,7 @@
         "clean:start": "npm start",
         "docs": "typedoc --options typedoc.json --exclude '*.spec.ts' ./src/",
         "e2e": "protractor",
-        "e2e:live": "protractor --elementExplorer",
+        "e2e:live": "npm run e2e -- --elementExplorer",
         "lint": "tsconfig-lint .",
         "outdated": "npm outdated",
         "postinstall": "npm run typings-install",
@@ -144,27 +144,27 @@
         "preversion": "npm test",
         "prewatch:dev": "npm run clean",
         "prewatch:prod": "npm run clean",
-        "profiling": "webpack --progress -c --profile --json > stats.json",
+        "profiling": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.prod.js --progress -c --profile --json > stats.json",
         "protractor": "protractor",
         "server": "npm run server:dev:hmr",
-        "server:dev": "webpack-dev-server --progress --profile --colors --display-error-details --display-cached --open --inline --watch",
+        "server:dev": "node --max-old-space-size=4096 ./node_modules/webpack-dev-server/bin/webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --open",
         "server:dev:hmr": "npm run server:dev -- --hot",
         "server:prod": "http-server dist --cors",
         "setup": "npm install --global typings rimraf && npm install --no-optional",
         "start": "npm run server",
-        "test": "karma start",
+        "test": "node --max-old-space-size=4096 ./node_modules/karma/bin/karma start",
         "tsc": "tsc",
         "typings": "typings",
         "typings-install": "typings install",
         "version": "npm run build",
         "watch": "npm run watch:dev",
-        "watch:dev": "webpack --watch --progress --profile --colors --display-error-details --display-cached",
+        "watch:dev": "npm run build:dev -- --watch",
         "watch:dev:hmr": "npm run watch:dev -- --hot",
-        "watch:prod": "webpack --watch --config webpack.prod.config.js --progress --profile --colors --display-error-details --display-cached",
+        "watch:prod": "npm run build:prod -- --watch",
         "watch:test": "npm run test -- --auto-watch --no-single-run",
         "watch:testd": "npm run test -- --auto-watch --no-single-run --browsers=Chrome",
         "webdriver": "webdriver-manager",
         "webdriver:start": "webdriver-manager start",
-        "webdriver:update": "webdriver-manager update --ie32"
+        "webdriver:update": "webdriver-manager update --ie32 --versions.ie=2.52.0"
     }
 }
