--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,9 +41,7 @@
         "placeOpenBraceOnNewLineForControlBlocks": false
     },
     "awesomeTypescriptLoaderOptions": {
-        "useCache": true,
         "resolveGlobs": true,
-        "forkChecker": true,
-        "cacheDirectory": "node_modules/.awesome-typescript-loader-cache"
+        "forkChecker": true
     }
 }
