Moved profiling output to reports folder (closes #77)

--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
         "karma-ie-launcher": "0.2.x",
         "remap-istanbul": "0.5.x",
         "protractor": "3.2.x",
-        "sinon": "1.17.x"
+        "sinon": "^1.17.3",
+        "mkdirp": "^0.5.1"
     },
     "engines": {
         "node": ">=4.3.0",
@@ -121,7 +122,7 @@
         "build:dev": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.dev.js --progress --profile --colors --display-error-details --display-cached",
         "build:prod": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.prod.js --progress --profile --colors --display-error-details --display-cached --bail",
         "ci": "npm run e2e && npm run test",
-        "clean": "rimraf doc coverage reports dist stats.json",
+        "clean": "rimraf doc reports dist",
         "clean:all": "rimraf typings && npm cache clean",
         "clean:dist": "rimraf dist",
         "clean:install": "npm install --no-optional",
@@ -138,13 +139,13 @@
         "preclean:install": "npm run clean:all",
         "preclean:start": "npm run clean",
         "pree2e": "npm run webdriver:update --  --standalone",
-        "preprofiling": "npm run clean",
+        "preprofiling": "npm run clean && mkdirp reports/profiling",
         "preserver:dev": "npm run clean",
         "preserver:prod": "npm run build:prod",
         "preversion": "npm test",
         "prewatch:dev": "npm run clean",
         "prewatch:prod": "npm run clean",
-        "profiling": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.prod.js --progress -c --profile --json > stats.json",
+        "profiling": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.prod.js --progress -c --profile --json > reports/profiling/stats.json",
         "protractor": "protractor",
         "server": "npm run server:dev:hmr",
         "server:dev": "node --max-old-space-size=4096 ./node_modules/webpack-dev-server/bin/webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --open",
