--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "angular-sanitize": "^1.5.2",
         "angular-touch": "^1.5.2",
         "angular-ui-router": "^0.2.18",
-        "axios": "0.9.x",
+        "axios": "^0.9.1",
         "angular-translate": "^2.11.0",
         "angular-translate-loader-static-files": "^2.10.0",
         "core-js": "^2.1.5",
@@ -49,67 +49,67 @@
         "immutable-angular": "^0.1.1",
         "js-data": "^2.9.0",
         "js-data-angular": "^3.2.1",
-        "lodash": "4.6.x",
-        "moment": "2.11.x",
-        "redux": "3.3.x",
+        "lodash": "^4.6.1",
+        "moment": "^2.12.0",
+        "redux": "^3.3.1",
         "rxjs": "5.0.0-beta.2"
     },
     "devDependencies": {
         "awesome-typescript-loader": "^0.16.2",
-        "autoprefixer": "6.3.x",
+        "autoprefixer": "^6.3.5",
         "typescript": "^1.8.9",
-        "reflect-metadata": "0.1.x",
+        "reflect-metadata": "^0.1.3",
         "typings": "^0.7.9",
-        "tslint": "3.5.x",
-        "ts-helper": "0.0.x",
-        "typedoc": "0.3.x",
-        "http-server": "0.9.x",
-        "tsconfig-lint": "0.8.x",
-        "rimraf": "2.5.x",
-        "ncp": "2.0.x",
-        "webpack": "1.12.x",
-        "webpack-dev-server": "1.14.x",
-        "copy-webpack-plugin": "1.1.x",
-        "extract-text-webpack-plugin": "1.0.x",
+        "tslint": "^3.6.0",
+        "ts-helper": "^0.0.1",
+        "typedoc": "^0.3.12",
+        "http-server": "^0.9.0",
+        "tsconfig-lint": "^0.10.3",
+        "rimraf": "^2.5.2",
+        "ncp": "^2.0.0",
+        "webpack": "^1.12.14",
+        "webpack-dev-server": "^1.14.1",
+        "copy-webpack-plugin": "^1.1.1",
+        "extract-text-webpack-plugin": "^1.0.1",
         "html-loader": "^0.4.3",
-        "html-webpack-plugin": "2.8.x",
-        "compression-webpack-plugin": "0.3.x",
-        "webpack-sha-hash": "1.x",
-        "raw-loader": "0.5.x",
-        "file-loader": "0.8.x",
-        "url-loader": "0.5.x",
+        "html-webpack-plugin": "^2.15.0",
+        "compression-webpack-plugin": "^0.3.1",
+        "webpack-sha-hash": "^1.0.0",
+        "raw-loader": "^0.5.1",
+        "file-loader": "^0.8.5",
+        "url-loader": "^0.5.7",
         "json-loader": "^0.5.4",
-        "style-loader": "0.13.x",
-        "exports-loader": "0.6.x",
-        "imports-loader": "0.6.x",
-        "expose-loader": "0.7.x",
-        "css-loader": "0.23.x",
-        "node-sass": "3.4.x",
-        "postcss-loader": "0.8.x",
-        "sass-loader": "3.1.x",
-        "ts-node": "^0.7.0",
-        "source-map-loader": "0.1.x",
+        "style-loader": "^0.13.1",
+        "exports-loader": "^0.6.3",
+        "imports-loader": "^0.6.5",
+        "expose-loader": "^0.7.1",
+        "css-loader": "^0.23.1",
+        "node-sass": "^3.4.2",
+        "postcss-loader": "^0.8.2",
+        "sass-loader": "^3.2.0",
+        "ts-node": "^0.7.1",
+        "source-map-loader": "^0.1.5",
         "tslint-loader": "^2.1.3",
-        "istanbul-instrumenter-loader": "0.1.x",
-        "jasmine-core": "2.4.x",
-        "phantomjs-prebuilt": "^2.1.6",
-        "phantomjs-polyfill": "0.0.x",
+        "istanbul-instrumenter-loader": "^0.2.0",
+        "jasmine-core": "^2.4.1",
+        "phantomjs-prebuilt": "^2.1.7",
+        "phantomjs-polyfill": "^0.0.2",
         "karma": "^0.13.22",
-        "karma-chrome-launcher": "0.2.x",
+        "karma-chrome-launcher": "^0.2.3",
         "karma-coverage": "^0.5.5",
         "karma-jasmine": "^0.3.8",
-        "karma-phantomjs-launcher": "1.0.x",
-        "karma-sourcemap-loader": "0.3.x",
-        "karma-webpack": "1.7.x",
+        "karma-phantomjs-launcher": "^1.0.0",
+        "karma-sourcemap-loader": "^0.3.7",
+        "karma-webpack": "^1.7.0",
         "parse5": "^1.3.2",
         "ngtemplate-loader": "^1.3.1",
-        "karma-firefox-launcher": "0.1.x",
-        "karma-junit-reporter": "0.3.x",
-        "karma-spec-reporter": "0.0.x",
+        "karma-firefox-launcher": "^0.1.7",
+        "karma-junit-reporter": "^0.4.1",
+        "karma-spec-reporter": "^0.0.25",
         "karma-mocha-reporter": "^2.0.0",
-        "karma-ie-launcher": "0.2.x",
-        "remap-istanbul": "0.5.x",
-        "protractor": "3.2.x",
+        "karma-ie-launcher": "^0.2.0",
+        "remap-istanbul": "^0.5.1",
+        "protractor": "^3.2.2",
         "sinon": "^1.17.3",
         "mkdirp": "^0.5.1"
     },
