--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
         "remap-istanbul": "^0.5.1",
         "protractor": "^3.2.2",
         "sinon": "^1.17.3",
-        "mkdirp": "^0.5.1"
+        "mkdirp": "^0.5.1",
+        "webpack-merge": "^0.8.4"
     },
     "engines": {
         "node": ">=4.3.0",
