--- a/package.json
+++ b/package.json
@@ -137,28 +137,29 @@
         "prebuild:dev": "npm run clean",
         "prebuild:prod": "npm run clean",
         "preclean:all": "npm run clean",
-        "preclean:install": "npm run clean:all",
+        "preclean:install": "npm run clean:all && rimraf node_modules",
         "preclean:start": "npm run clean",
         "pree2e": "npm run webdriver:update --  --standalone",
         "preprofiling": "npm run clean && mkdirp reports/profiling",
         "preserver:dev": "npm run clean",
         "preserver:prod": "npm run build:prod",
-        "preversion": "npm test",
         "prewatch:dev": "npm run clean",
         "prewatch:prod": "npm run clean",
         "profiling": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.prod.js --progress -c --profile --json > reports/profiling/stats.json",
         "protractor": "protractor",
-        "server": "npm run server:dev:hmr",
+        "server": "npm run server:dev",
         "server:dev": "node --max-old-space-size=4096 ./node_modules/webpack-dev-server/bin/webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --open",
         "server:dev:hmr": "npm run server:dev -- --hot",
         "server:prod": "http-server dist --cors",
         "setup": "npm install --global typings rimraf && npm install --no-optional",
         "start": "npm run server",
+        "start:hmr": "npm run server:dev:hmr",
+        "start:dev": "npm run server",
+        "start:prod": "npm run server:prod",
         "test": "node --max-old-space-size=4096 ./node_modules/karma/bin/karma start",
         "tsc": "tsc",
         "typings": "typings",
         "typings-install": "typings install",
-        "version": "npm run build",
         "watch": "npm run watch:dev",
         "watch:dev": "npm run build:dev -- --watch",
         "watch:dev:hmr": "npm run watch:dev -- --hot",
