--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
         "rxjs": "5.0.0-beta.2"
     },
     "devDependencies": {
-        "awesome-typescript-loader": "^0.16.2",
+        "awesome-typescript-loader": "^0.17.0-rc.5",
         "autoprefixer": "^6.3.5",
         "typescript": "^1.8.9",
         "reflect-metadata": "^0.1.3",
@@ -158,6 +158,7 @@
         "start:dev": "npm run server",
         "start:prod": "npm run server:prod",
         "test": "node --max-old-space-size=4096 ./node_modules/karma/bin/karma start",
+        "test-subset": "npm run test -- --path--",
         "tsc": "tsc",
         "typings": "typings",
         "typings-install": "typings install",
@@ -166,6 +167,7 @@
         "watch:dev:hmr": "npm run watch:dev -- --hot",
         "watch:prod": "npm run build:prod -- --watch",
         "watch:test": "npm run test -- --auto-watch --no-single-run",
+        "watch:test-subset": "npm run watch:test -- --path--",
         "watch:testd": "npm run test -- --auto-watch --no-single-run --browsers=Chrome",
         "webdriver": "webdriver-manager",
         "webdriver:start": "webdriver-manager start",
