--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
         "tslint": "^3.7.1",
         "ts-helper": "^0.0.1",
         "typedoc": "^0.3.12",
-        "http-server": "^0.9.0",
         "tsconfig-lint": "^0.11.0",
         "rimraf": "^2.5.2",
         "ncp": "^2.0.0",
@@ -108,6 +107,7 @@
         "remap-istanbul": "^0.5.1",
         "protractor": "^3.2.2",
         "sinon": "^1.17.3",
+        "superstatic": "^4.0.2",
         "mkdirp": "^0.5.1",
         "webpack-merge": "^0.8.4"
     },
@@ -148,12 +148,13 @@
         "server": "npm run server:dev",
         "server:dev": "node --max-old-space-size=4096 ./node_modules/webpack-dev-server/bin/webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --open",
         "server:dev:hmr": "npm run server:dev -- --hot",
-        "server:prod": "http-server dist --cors",
+        "server:prod": "npm run superstatic",
         "setup": "npm install --global typings rimraf && npm install --no-optional",
         "start": "npm run server",
         "start:hmr": "npm run server:dev:hmr",
         "start:dev": "npm run server",
         "start:prod": "npm run server:prod",
+        "superstatic": "cd dist && superstatic --config ../superstatic.json --port 8080 --host 0.0.0.0",
         "test": "node --max-old-space-size=4096 ./node_modules/karma/bin/karma start",
         "test-subset": "npm run test -- --path--",
         "tsc": "tsc",
