--- a/package.json
+++ b/package.json
@@ -145,13 +145,15 @@
         "prewatch:prod": "npm run clean",
         "profiling": "node --max-old-space-size=4096 ./node_modules/webpack/bin/webpack --config config/webpack.prod.js --progress -c --profile --json > reports/profiling/stats.json",
         "protractor": "protractor",
-        "server": "npm run server:dev",
-        "server:dev": "node --max-old-space-size=4096 ./node_modules/webpack-dev-server/bin/webpack-dev-server --config config/webpack.dev.js --inline --progress --profile --colors --watch --display-error-details --display-cached --open",
+        "server": "npm run server:dev:hmr:livereload",
+        "server:dev": "node --max-old-space-size=4096 ./node_modules/webpack-dev-server/bin/webpack-dev-server --config config/webpack.dev.js --progress --profile --colors --watch --display-error-details --display-cached --open",
         "server:dev:hmr": "npm run server:dev -- --hot",
+        "server:dev:hmr:livereload": "npm run server:dev:hmr -- --inline",
         "server:prod": "npm run superstatic",
         "setup": "npm install --global typings rimraf && npm install --no-optional",
         "start": "npm run server",
         "start:hmr": "npm run server:dev:hmr",
+        "start:hmr:livereload": "npm run server:dev:hmr:livereload",
         "start:dev": "npm run server",
         "start:prod": "npm run server:prod",
         "superstatic": "cd dist && superstatic --config ../superstatic.json --port 8080 --host 0.0.0.0",
