Added possibility to import from root (config in webpack and tsconfig.json)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,15 @@
         "sourceMap": true,
         "outDir": "./.tmp",
         "moduleResolution": "node",
-        "listFiles": false
+        "listFiles": false,
+        "baseUrl": "./src",
+        "rootDirs": [
+            "./src",
+            "./config"
+        ],
+        "paths": {
+            
+        }
     },
     "exclude": [
         "node_modules",
